Tests for blocking concurrent queue

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,9 +13,30 @@ add_executable(test1
 )
 
 target_link_libraries(test1
-
         boost_system
         boost_thread
         boost_date_time
         pthread
         )
+
+add_executable(
+        unit_tests
+        test_bc_queue.cpp
+)
+
+target_link_libraries(unit_tests
+        PRIVATE
+        gtest_main
+)
+
+add_test(NAME unit_tests
+        COMMAND unit_tests)
+
+add_custom_command(TARGET unit_tests
+        POST_BUILD
+        COMMAND ctest -C $<CONFIGURATION> --output-on-failure)
+
+#add_subdirectory( benchmarks )
+
+
+
