--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,12 +12,12 @@ include_directories(
 
 add_executable(ex1 ex1.cpp)
 add_executable(ex2 ex2.cpp)
-#add_executable(ex3 ex3.cpp)
+add_executable(ex3 ex3.cpp)
 
-target_link_libraries(test1
+#target_link_libraries(test1
+#
+#        boost_system
+#        boost_thread
+ #       boost_date_time
 
-        boost_system
-        boost_thread
-        boost_date_time
-
-        )
+ #       )
